Fix tablet responsiveness on small device

--- a/racikan-penyihir-style.css
+++ b/racikan-penyihir-style.css
@@ -106,6 +106,11 @@ td.arrow {
     max-width: 80%;
 }
 
+.tablet>img {
+    max-height: 480px;
+    max-width: 100%;
+}
+
 footer {
     margin-top: 3rem;
     margin-bottom: 1rem;
